# python_uarch_bench

./: .gitignore  .gitmodules  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py  shell.nix
.github/workflows/: pylint.yml  python-app.yml
python_uarch_bench/: uarch_bench.py
src/python_uarch_bench/: uarch_bench.py
src/python_uarch_bench/test/data/: zen4.txt
test/: simple.py
